<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_move"
        android:title="@string/move_pack"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rename"
        android:title="@string/rename_id"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_song"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />
</menu>
